# ISSF-2023

./: Cargo.toml  Old.rs
src/: Main.rs  belarus.csv  shader.wgsl  spreadsheet.csv  swedenstuff.csv
src/lib/: activations.rs  bayesian.rs  checkinfshader.wgsl  intervention.rs  matrix.rs  mod.rs  moveshader.wgsl  network.rs  person.rs  pointShader.wgsl  sirmodel.rs  trainer.rs  wgpuInit.rs
