[package]
name = "wgpuTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"wgpu" = "0.17"
"winit" = "0.28.7"
"rand" = "0.8.5"
"cgmath" = "0.18.0"
"bytemuck" = "1.14.0"
"env_logger" = "0.10.0"
"pollster" = "0.3.0"
"futures-intrusive" = "0.5.0"


"futures" = "0.3.28"
"gfx-hal" = "0.9.0"
"image" = "0.24.7"
"log" = "0.4.20"
"anyhow" = "1.0.75"